src/objects/Dispatched_Item__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dispatched Items</relationshipLabel>
        <relationshipName>Dispatched_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dispatch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dispatch</label>
        <referenceTo>Dispatch__c</referenceTo>
        <relationshipLabel>Dispatched Items</relationshipLabel>
        <relationshipName>Dispatched_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Rate Plan Charge</label>
        <referenceTo>Job_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Dispatched Items</relationshipLabel>
        <relationshipName>Dispatched_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Dispatched Items</relationshipLabel>
        <relationshipName>Dispatched_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Notes__c</fullName>
        <label>Special Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stock_Item__c</fullName>
        <label>Stock Item</label>
        <referenceTo>Stock_Item__c</referenceTo>
        <relationshipLabel>Dispatched Items</relationshipLabel>
        <relationshipName>Dispatched_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Dispatched Item</label>
    <nameField>
        <label>Dispatched Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dispatched Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>